@@ -1,3 +1,8 @@
+2001-03-21  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
+
+	* w3m.el (w3m-arrived-shutdown): Check sites which are arrived on
+	the other emacs process.
+
 2001-03-21  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* w3m.el (w3m-input-url): 'nil' don't add candidates.
